--- a/pages/comments/comments.wxml
+++ b/pages/comments/comments.wxml
@@ -1,3 +1,4 @@
+<wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
 <view style='height:{{height4*2+20}}px' class='nav-wrap'>
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{nick}}</view>
   <view style='display: flex; justify-content: space-around;flex-direction: column'>
@@ -16,14 +17,14 @@
 <view style='padding-bottom:150rpx;'>
   <view wx:for="{{comments}}" wx:key="{{item.id}}">
     <view class='r1 cont mt30'>
-      <image class='img2 ml20' src='{{item.created_by.headimg}}' mode='widthFix'></image>
+      <image class='img2 ml20' src='{{item.created_by.headimg}}' mode='aspectFill'></image>
       <view class='col ml20'>
         <view class='r1'>
-          <text class='f30'>{{item.created_by.nick}}</text>
+          <text style='width:500rpx;' class='f30'>{{item.created_by.nick}}</text>
           <view class='block r1'>
-            <view data-id='{{item.id}}' bindtap='answer' style='padding-right:10rpx;'>回复</view>
-            <view class='iconfont icon-dianzan'></view>
-            <view>2</view>
+            <view data-id='{{item.id}}' bindtap='answer' style='padding-right:10rpx;width:100rpx;height:50rpx;text-align:center;padding-top:10rpx;color:#57b0f0;position:relative;top:-7rpx;font-size:28rpx'>回复</view>
+            <!-- <view class='iconfont icon-dianzan'></view>
+            <view>2</view> -->
           </view>
         </view>
         <view class='time2'>{{item.created_at}}</view>
@@ -32,34 +33,32 @@
           <view wx:for="{{item.answers}}" wx:key="{{item.id}}" class='comment4 col'>
             <view wx:if="{{index!=0}}" class='line5'></view>
             <view class='r1 cont mt30'>
-              <image class='img ml20' src='{{item.created_by.headimg}}' mode='widthFix'></image>
+              <image class='img ml20' src='{{item.created_by.headimg}}' mode='aspectFill'></image>
               <view class='col ml20'>
                 <view class='f28'>{{item.created_by.nick}}</view>
-                <view class='time2'>{{item.created_at}}</view>
+                <view class='time2'>{{filter.getDate(item.created_at)}}</view>
               </view>
             </view>
             <text class='content3'>{{item.answer}}</text>
-
           </view>
         </view>
       </view>
-
     </view>
     <view class='ml20 mt20 line4'></view>
   </view>
 </view>
 <view wx:if="{{input==true}}" class='comment-inp r1'>
-  <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
+  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
   <input bindtap='focusInput' disabled="true" value='{{commentVal}}' bindblur='inputVal' class='input' placeholder='说点什么...'></input>
   <view bindtap='send' class='ml20 f28 send c29'>发送</view>
 </view>
-<view wx:if="{{input3==true}}" style='position: fixed;width: 100%;height: 80rpx;background-color: #fff;bottom:{{height2}}px;z-index:9;padding-top: 30rpx;padding-left: 20rpx;' class='r1'>
-  <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
+<view wx:if="{{input3==true}}" style='position: fixed;width: 100%;height: 80rpx;background-color:#f4f9fc;bottom:{{height2}}px;z-index:9;padding-top: 30rpx;padding-left: 20rpx;' class='r1'>
+  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
   <input bindfocus="focusInput3" adjust-position="{{false}}"  focus="{{focus3}}" value='{{commentVal}}'   bindblur='inputVal3' class='input' placeholder='说点什么...'></input>
   <view bindtap='send' class='ml20 f28 send c29'>发送</view>
 </view>
 <view style='bottom:{{height3}}px;' wx:if="{{input2==true}}" class='comment-inp r1'>
-  <image class='img2' src='{{user.headimg}}' mode='widthFix'></image>
-  <input bindfocus="focusInput2" adjust-position="{{false}}" focus="{{focus2}}" value='{{commentVal2}}' bindblur='inputVal2' class='input' placeholder='回复..'></input>
+  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
+  <input confirm-type="返回" bindfocus="focusInput2" adjust-position="{{false}}" focus="{{focus2}}" value='{{commentVal2}}' bindblur='inputVal2' class='input' placeholder='回复..'></input>
   <view bindtap='sendanswer' class='ml20 f28 send c29'>回复</view>
 </view>
