--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -13,6 +13,9 @@
   width: 750rpx;
   align-self: center;
 }
+.c57{
+  color:#57b0f0;
+}
 
 .footer {
   position: fixed;
@@ -156,7 +159,7 @@ position:relative;
   position: fixed;
   width: 100%;
   height: 80rpx;
-  background-color: #fff;
+  background-color: #f4f9fc;
   bottom: 0rpx;
   z-index: 9;
   padding-top: 30rpx;
@@ -166,7 +169,7 @@ position:relative;
 .input {
   width: 500rpx;
   height: 57rpx;
-  background-color: #f4f9fc;
+  background-color: #fff;
   font-size: 28rpx;
   padding-top: 3rpx;
   padding-left: 20rpx;
@@ -176,7 +179,7 @@ position:relative;
 
 .send {
   margin-top: 9rpx;
-  color:#0000ff;
+  color:#57b0f0;
 }
 
 .cont {
