--- a/pages/updata/updata.wxml
+++ b/pages/updata/updata.wxml
@@ -27,8 +27,8 @@
     <view class='item'>
       昵称
     </view>
-    <view class="item-name"><span wx:if="{{userInfo.nick==null}}" class="span">请填写昵称</span>
-    <span wx:if="{{userInfo.nick!=null}}">{{userInfo.nick}}</span></view>
+    <view wx:if="{{userInfo.nick==null}}" class="item-name">请填写昵称</view>
+    <view class="item-name" wx:else>{{userInfo.nick}}</view>
     <view style='margin-top:6rpx;position:absolute;right:30rpx;' class='iconfont2 icon-qianjin'></view>
   </view>
   <view class='line'></view>
@@ -39,8 +39,8 @@
     <view class="item-name">
       <picker bindchange="bindPickerChange"  value="{{index}}" range="{{array}}">
         <view class="picker">
-          <span wx:if="{{index==null}}" class="span">选择性别</span>
-          <span wx:if="{{index!=null}}">{{array[index]}}</span>
+          <span wx:if="{{index==null || index==-1}}" class="span">选择性别</span>
+          <span wx:else>{{array[index]}}</span>
         </view>
       </picker>
     </view>
@@ -54,8 +54,8 @@
     <view class="item-name">
       <picker mode="date" value="{{date}}" start="1900-01-01" end="{{nowdate}}"  bindchange="bindDateChange">
         <view class="picker">
-          <span wx:if="{{date==null}}" class="span">选择日期</span>
-          <span wx:if="{{date!=null}}">{{date}}</span>
+          <span wx:if="{{date==null || date=='NaN-NaN-NaN'}}" class="span">选择日期</span>
+          <span wx:else>{{date}}</span>
         </view>
       </picker>
     </view>
