--- a/pages/userinfo/userinfo.wxml
+++ b/pages/userinfo/userinfo.wxml
@@ -1,4 +1,5 @@
 <!--pages/userinfo/userinfo.wxml-->
+<wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
 <view style='height:{{height4*2+20}}px' class='nav-wrap'>
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{nick}}</view>
   <view style='display: flex; justify-content: space-around;flex-direction: column'>
@@ -17,7 +18,7 @@
 <view class='head'>
   <view class='row1 ml20'>
     <view class="index-profile">
-      <image src='{{img2}}' class="index-profile__img"></image>
+      <image mode='aspectFill' src='{{img2}}' class="index-profile__img"></image>
     </view>
     <view class='col ml20 w550'>
       <view class='atten-fans'>
@@ -88,11 +89,12 @@
         </view>
       </navigator>
       <view class='headimg'>
-        <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-        <view class='nick'>{{item.created_by.nick}}</view>
+        <image mode='aspectFill' bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
+          <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
+          <view wx:else class='nick'>{{item.author_name}}</view>
         <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
-        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
         </view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
@@ -109,11 +111,12 @@
         </view>
       </navigator>
       <view class='headimg'>
-        <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-        <view class='nick'>{{item.created_by.nick}}</view>
+        <image mode='aspectFill' bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
+          <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
+          <view wx:else class='nick'>{{item.author_name}}</view>
         <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
-        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
         </view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
@@ -134,11 +137,12 @@
         </view>
       </navigator>
       <view class='headimg'>
-        <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-        <view class='nick'>{{item.created_by.nick}}</view>
+        <image mode='aspectFill' bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
+          <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
+          <view wx:else class='nick'>{{item.author_name}}</view>
         <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect2'>
-       <view data-index="{{index}}" data-num="{{item.collection}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-num="{{item.collection}}" data-id="{{item.id}}"  style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+       <view data-index="{{index}}" data-num="{{item.collection}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-num="{{item.collection}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
         </view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
@@ -156,10 +160,11 @@
         </view>
       </navigator>
       <view class='headimg'>
-        <image bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.created_by.headimg}}'></image>
-        <view class='nick'>{{item.created_by.nick}}</view>
-        <view data-index="{{index}}" data-num="{{item.collection}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect2' style='position:absolute;left:200rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-num="{{item.collection}}" data-id="{{item.id}}" bindtap='nocollect2' style='position:absolute;left:200rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
+       <image mode='aspectFill' bindtap='userinfo' data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
+          <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
+          <view wx:else class='nick'>{{item.author_name}}</view>
+        <view data-index="{{index}}" data-num="{{item.collection}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}" bindtap='collect2' style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
+        <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-num="{{item.collection}}" data-id="{{item.id}}" bindtap='nocollect2' style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
         <view class='numb' wx:if="{{item.collection!=null}}">{{item.collection}}</view>
         <view class='numb' wx:if="{{item.collection==null}}">0</view>
       </view>
