--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -63,7 +63,7 @@
       <view class='ml20 mt20 line4'></view>
     </view>
   </view>
-  <view wx:if="{{comments.length>0}}" class='cen w1 pt20 h60 f28' bindtap='getAllComments'>查看全部{{comments.length}}条评论
+  <view wx:if="{{comments.length>0}}" class='cen w1 pt20 h60 f28' bindtap='getAllComments'>查看全部{{commentslen.length}}条评论
     <span style="font-size:25rpx;position:relative;bottom:2rpx;" class='iconfont2 icon-qianjin'></span>
   </view>
   <view class='line2'></view>
