--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,7 +1,8 @@
 <!--pages/detail/detail.wxml-->
+<wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
 
 <view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{list.author_name}}</view>
+  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
   <view style='display: flex; justify-content: space-around;flex-direction: column'>
     <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
       <view wx:if="{{getshare==0}}" bindtap='goback'>
@@ -15,20 +16,20 @@
   </view>
 </view>
 <view style='height:{{height4*2+20}}px;' class='pad'></view>
-<view class='contain'>
+<view class='contain2'>
   <swiper indicator-dots="true" bindchange="change" style='height:{{height*750}}rpx;max-height:1000rpx;' circular='false' class="swiper">
     <swiper-item wx:for="{{list.img}}" wx:key="{{index}}" class="swiper-item">
       <image data-item="{{item}}" bindtap='previewImage' mode='widthFix' src="{{item}}" />
     </swiper-item>
   </swiper>
   <!-- <view class='count'>{{current+1}}/{{count}}</view> -->
-  <view class='user'>
+  <!-- <view class='user'>
     <image mode='aspectFill' src='{{list.author_head}}'></image>
     <view class='nick'>{{list.author_name}}</view>
-    <button class='contact' open-type="contact" bindcontact="handleContact">联系我们</button>
-    <!-- <button class='contact' open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">获取手机 </button> -->
-  </view>
-  <text class='content'>
+    <button class='contact' open-type="contact" bindcontact="handleContact">联系我们</button> -->
+  <!-- <button class='contact' open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">获取手机 </button> -->
+  <!-- </view> -->
+  <text class='content2'>
     {{list.content}}
   </text>
   <view class='r2 zan'>
@@ -36,53 +37,35 @@
     <view wx:if="{{candelete==true}}" bindtap='delete' style='font-size:40rpx' class='iconfont icon-iconfontshanchu6'></view>
   </view>
   <view class='line2 mt30'></view>
-  <view class='comment'>
-    <view class='ml20 pl10 mt30 f32 b'>笔记评论</view>
-    <view class='line3'></view>
-    <view class='r1 mt20 ml20 pl10'>
-      <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
-      <view class='ml20 comment2' bindtap='comment'>说点什么，让TA也认识看笔记的你吧...</view>
-    </view>
-    <view class='ml20 mt20 line4'></view>
-    <view wx:if="{{commentslen.length!=0}}">
-      <view wx:if="{{index<3}}" wx:for="{{comments}}" wx:key="{{item.id}}">
-        <view class='r1 cont mt30'>
-          <image class='img2 ml30' src='{{item.created_by.headimg}}' mode='aspectFill'></image>
-          <view class='col ml20'>
-            <view class='r1'>
-              <text style='width:500rpx;' class='f30'>{{item.created_by.nick}}</text>
-              <view class='block r1'>
-                <view data-id='{{item.id}}' bindtap='answer' style='margin-right:30rpx;color:#57b0f0'>回复</view>
-                <view data-id='{{item.id}}' wx:if="{{canDele==true}}" bindtap='deleteComment' style='font-size:32rpx;position:relative;top:5rpx;' class='iconfont icon-iconfontshanchu6'></view>
-                <!-- <view class='iconfont icon-dianzan'></view>
-              <view>2</view> -->
-              </view>
-            </view>
-            <view class='time2'>{{item.created_at}}</view>
-            <text class='content2'>{{item.comment}}</text>
-            <text decode="true" wx:if="{{item.answers.length==1}}" class='comment3'>{{item.answers[0].created_by.nick}}:{{item.answers[0].answer}}</text>
-            <text bindtap='getAllComments' wx:if="{{item.answers.length>1}}" class='comment3'>{{item.answers[0].created_by.nick}}等人 <text class='c57'>共{{item.answers.length}}条回复</text></text>
+</view>
+<view class='contain3'>
+<view class='content3'>相关推荐</view>
+    <view style='margin-left:20rpx' class="left">
+      <view wx:if="{{index%2==0}}" wx:for="{{getlist}}" wx:key="{{item.id}}">
+        <navigator url="../detail/detail?id={{item.id}}" class="item">
+          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+          <view class="item-title-box">
+            <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+            <view wx:else class="item-title">{{item.content}}</view>
           </view>
-        </view>
-        <view class='ml20 mt20 line4'></view>
+        </navigator>
       </view>
-      <view wx:if="{{comments.length>0}}" class='cen w1 pt20 h60 f28' bindtap='getAllComments'>查看全部{{commentslen.length}}条评论
-        <span style="font-size:25rpx;position:relative;bottom:2rpx;" class='iconfont2 icon-qianjin'></span>
+      <view style='height:200rpx;' class='bottom'></view>
+    </view>
+    <view style='margin-right:20rpx' class="right">
+      <view wx:for="{{getlist}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
+        <navigator url="../detail/detail?id={{item.id}}" class="item">
+          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+          <view class="item-title-box">
+           <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+            <view wx:else class="item-title">{{item.content}}</view>
+          </view>
+        </navigator>
       </view>
+      <view style='height:200rpx;' class='bottom'></view>
     </view>
   </view>
-  <view class='line2'></view>
-</view>
-<view bindblur='inputVal3' style="bottom:{{height2}}px;" wx:if="{{input==true}}" class='comment-inp r1'>
-  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
-  <input adjust-position='{{false}}' focus="{{focus}}" value='{{commentVal}}' bindfocus="focusInput" bindblur='inputVal' class='input' placeholder='说点什么...'></input>
-  <view bindtap='send' class='ml20 f28 send'>发送</view>
-</view>
-<view style='bottom:{{height3}}px' wx:if="{{input2==true}}" class='comment-inp r1'>
-  <image class='img2' src='{{user.headimg}}' mode='aspectFill'></image>
-  <input bindfocus="focusInput2" adjust-position="{{false}}" focus="{{focus2}}" value='{{commentVal2}}' bindblur='inputVal2' class='input' placeholder='回复..'></input>
-  <view bindtap='sendanswer' class='ml20 f28 send'>回复</view>
-</view>
+
 <view class='footer'>
   <view style='margin-left:86rpx;' class='r1'>
     <button data-collect='{{list.collect}}' data-id="{{list.id}}" data-index="{{index}}" bindtap='ifcollect' class='share2'>
