--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,9 +1,14 @@
 /* pages/detail/detail.wxss */
-
+@import '../indexo/indexo.wxss';
 .swiper {
   width: 100%;
 }
-
+body{
+  background-color: #fff;
+}
+page{
+  background-color: #fff;
+}
 .swiper-item {
   width: 100%;
   display: flex;
@@ -47,12 +52,14 @@
   
 }
 
-.contain {
+.contain2 {
   width: 100%;
-  height: auto;
-  padding-bottom: 140rpx;
+  height: auto; 
 }
-
+.contain3{
+  width: 100%;
+  height: auto; 
+}
 .user {
  width:700rpx;
 height:80rpx;
@@ -77,7 +84,7 @@ padding-left:10rpx;
   margin-top: 10rpx;
 }
 
-.content {
+.content2 {
  margin-left:20rpx;
 margin-top:20rpx;
 font-size:32rpx;
@@ -86,7 +93,16 @@ display:block;
 padding-left:10rpx;
 letter-spacing:3rpx;
 line-height:50rpx;
-
+}
+.content3 {
+ margin-left:20rpx;
+margin-top:20rpx;
+font-size:30rpx;
+width:700rpx;
+display:block;
+padding-left:10rpx;
+letter-spacing:3rpx;
+line-height:50rpx;
 }
 
 .count {
@@ -195,7 +211,7 @@ position:relative;
    font-size: 26rpx;
   color: #d6d6d6;
 }
-.content2{
+/* .content2{
 font-size:28rpx;
 margin-top:20rpx;
 padding-bottom:20rpx;
@@ -205,7 +221,7 @@ word-break: break-all;
 word-wrap: break-word;
 letter-spacing:2rpx;
 
-}
+} */
 .comment3 {
  display:block;
   width: 570rpx;
