--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -2,20 +2,20 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
 <view class='topone'>
   <view style='height:{{height4*2+20}}px' class='nav-wrap'>
-  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>搜索</view>
-  <view style='display: flex; justify-content: space-around;flex-direction: column'>
-    <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
-      <view  bindtap='goback'>
-        <image src='../../images/fanhui.png' mode='aspectFill' class='back-pre'></image>
+    <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>搜索</view>
+    <view style='display: flex; justify-content: space-around;flex-direction: column'>
+      <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
+        <view bindtap='goback'>
+          <image src='../../images/fanhui.png' mode='aspectFill' class='back-pre'></image>
+        </view>
+        <view bindtap='goIndex'>
+          <image src='../../images/shouye22.png' mode='aspectFill' class='back-home'></image>
+        </view>
+        <view style='width:100%;height:{{height4*2+20}}px;background-color:#fff;'></view>
       </view>
-      <view bindtap='goIndex'>
-        <image src='../../images/shouye22.png' mode='aspectFill' class='back-home'></image>
-      </view>
-      <view style='width:100%;height:{{height4*2+20}}px;background-color:#fff;'></view>
     </view>
   </view>
-</view>
-<view style='height:{{height4*2+20}}px;' class='pad'></view>
+  <view style='height:{{height4*2+20}}px;' class='pad'></view>
   <view hidden="{{inputShowed}}" bindtap="showInput" class='nav'>
     <view style='color:black; position: absolute;margin-left: 65rpx;top:21rpx;z-index:3' class='iconfont icon-sousuokuang'></view>
     <view hover-class='none'>
@@ -30,59 +30,39 @@
     <view class="cancel" bindtap="hideInput">取消</view>
     <view class="cancel" wx:if="{{inputVal!=''}}" bindtap="getList">搜索</view>
   </view>
+</view>
+<view class='body'>
+  <view class='title'>
+    #{{title}}
   </view>
-  <view class='body'>
-    <view class='title'>
-      #{{title}}
-    </view>
-    <view class='number'>搜索到{{list.length}}篇笔记</view>
-    <view wx:if="{{list!=null}}" class="content">
-      <view class="left">
-        <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
-          <!-- <template is="item" data="{{...item}}" ></template> -->
-          <navigator url="../detail/detail?id={{item.id}}" class="item">
-            <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
-            <view class="item-title-box">
-              <view class="item-title">{{item.content}}</view>
-            </view>
-          </navigator>
-          <view class='headimg'>
-            <image mode='aspectFill'  data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
-          <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
-          <view wx:else class='nick'>{{item.author_name}}</view>
-            <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
-            <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-            <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}" style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
-            </view>
-            <view class='numb' wx:if="{{item.collection>0}}">{{item.collection}}</view>
-            <!-- <view class='numb' wx:if="{{item.collection==null}}">0</view> -->
+  <view class='number'>搜索到{{list.length}}篇笔记</view>
+  <view wx:if="{{list!=null}}" class="content">
+    <view class="left">
+      <view wx:if="{{index%2==0}}" wx:for="{{list}}" wx:key="{{item.id}}">
+        <navigator url="../detail/detail?id={{item.id}}" class="item">
+          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+          <view class="item-title-box">
+            <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+            <view wx:else class="item-title">{{item.content}}</view>
           </view>
-
-        </view>
+        </navigator>
       </view>
-      <view class="right">
-        <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
-          <!-- <template is="item" data="{{...item}}" wx:if="{{index%2==1}}"></template> -->
-          <navigator url="../detail/detail?id={{item.id}}" class="item">
-            <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
-            <view class="item-title-box">
-              <view class="item-title">{{item.content}}</view>
-            </view>
-          </navigator>
-          <view class='headimg'>
-           <image  mode='aspectFill' data-user="{{item.created_by.id}}" class='img2' src='{{item.author_head}}'></image>
-         <view wx:if="{{item.author_name.length>4}}" class='nick'>{{filter.Limit(item.author_name)}}</view>
-          <view wx:else class='nick'>{{item.author_name}}</view>
-            <view data-collect='{{item.collect}}' data-id="{{item.id}}" data-index="{{index}}" bindtap='ifcollect'>
-            <view data-index="{{index}}" wx:if="{{item.collect==0}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;' class='iconfont icon-xin1'></view>
-            <view data-index="{{index}}" wx:if="{{item.collect==1}}" data-id="{{item.id}}"  style='position:absolute;left:220rpx;margin-top:15rpx;color:red;' class='iconfont icon-xin'></view>
-            </view>
-            <view class='numb' wx:if="{{item.collection>0}}">{{item.collection}}</view>
-          </view>
-        </view>
-      </view>
+      <view class='bottom'></view>
     </view>
-    <view wx:if="{{list==null}}" class='body'>
-      对不起，暂无搜索结果
+    <view class="right">
+      <view wx:for="{{list}}" data-index="{{index}}" wx:if="{{index%2==1}}" wx:key="{{item.id}}">
+        <navigator url="../detail/detail?id={{item.id}}" class="item">
+          <image class="item-img" src="{{item.img[0]}}" mode="widthFix"></image>
+          <view class="item-title-box">
+            <view wx:if="{{item.content.length>24}}" class="item-title">{{filter.Limit(item.content)}}</view>
+            <view wx:else class="item-title">{{item.content}}</view>
+          </view>
+        </navigator>
+      </view>
+      <view class='bottom'></view>
     </view>
   </view>
+  <view wx:if="{{list==null}}" class='body'>
+    对不起，暂无搜索结果
+  </view>
+</view>
